--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/icone.ico" type="image/x-icon">
     <title>Login page</title>
 </head>
 <body>
     <div class="main-login">
         <div class="left-login">
             <h1>Faça login<br>E entre para o nosso time</h1>
-            <img src="/animação.svg" alt="animação" class="left-login-image">
+            <img src="/img/animação.svg" alt="animação" class="left-login-image">
         </div>
 
         <div class="right-login">
